--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@types/highlight.js": "^9.12.3",
     "@types/ipfs": "git+https://github.com/vishalkuo/types-ipfs.git",
     "@types/webtorrent": "^0.107.0",
-    "highlight.js": "^9.15.10",
+    "highlight.js": "^10.4.1",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
     "marked-ts": "^1.0.0-beta.4",
-    "vim-wasm": "0.0.12",
+    "vim-wasm": "^0.0.12",
     "webtorrent": "^0.107.16"
   }
 }
